--- a/services.html
+++ b/services.html
@@ -569,12 +569,23 @@
 <div class="card">
   <h3>EV Multi-Domain SSL (3 Domains)</h3>
   <img src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo EV Multi-Domain" />
+  <p>Activate your verified company name across up to 250 different domains for maximum visibility and trust.</p>
+
+  <ul style="list-style:none;padding-left:0;margin-top:10px;">
+	  <li>Email Signing: ✅</li>
+	  <li>Email Encryption: ✅</li>
+	  <li>Document Signing: ✅</li>
+	  <li>Certificate Authentication: ✅</li>
+	  <li>Server Support: ❌</li>
+	  <li>Device Licensing: Unlimited</li>
+  </ul>
+	
   <p><strong>Validation Type:</strong> EV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
   <p><strong>Issuance:</strong> 1–5 Days</p>
   <p><strong>Warranty:</strong> $1,750,000</p>
   <p><strong>Total Domains:</strong> 3 (2 additional SANs included)</p>
-  <p>Activate your verified company name across up to 250 different domains for maximum visibility and trust.</p>
+  
   <span class="badge">From $649.99/yr</span>
   <div style="margin-top:10px;">
     <a href="https://nowpayments.io/payment/?iid=6436837884&source=button" target="_blank" rel="noreferrer noopener">
@@ -586,12 +597,22 @@
 <div class="card">
   <h3>EV SSL Certificate</h3>
   <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" alt="Sectigo EV SSL" />
+  <p>Display your verified company name across up to 250 different domains for maximum visibility and trust.</p>  
+  <ul style="list-style:none;padding-left:0;margin-top:10px;">
+	  <li>Email Signing: ✅</li>
+	  <li>Email Encryption: ✅</li>
+	  <li>Document Signing: ✅</li>
+	  <li>Certificate Authentication: ✅</li>
+	  <li>Server Support: ❌</li>
+	  <li>Device Licensing: Unlimited</li>
+	</ul>
+
   <p><strong>Validation Type:</strong> EV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
   <p><strong>Issuance:</strong> 1–5 Days</p>
   <p><strong>Warranty:</strong> $1,750,000</p>
   <p><strong>Total Domains:</strong> 1</p>
-  <p>Display your verified company name across up to 250 different domains for maximum visibility and trust.</p>
+  
   <span class="badge">From $279.99/yr</span>
   <div style="margin-top:10px;">
     <a href="https://nowpayments.io/payment/?iid=5091193372&source=button" target="_blank" rel="noreferrer noopener">
@@ -605,12 +626,21 @@
 <div class="card">
   <h3>OV Wildcard SSL</h3>
   <img src="https://seeklogo.com/images/S/sectigo-logo-3EF2BDCC26-seeklogo.com.png" alt="Sectigo OV Wildcard" />
+  <p>Secure your entire domain, including all subdomains, with a single certificate. Ideal for businesses and internal networks.</p>
+  <ul style="list-style:none;padding-left:0;margin-top:10px;">
+	  <li>Email Signing: ✅</li>
+	  <li>Email Encryption: ✅</li>
+	  <li>Document Signing: ✅</li>
+	  <li>Certificate Authentication: ✅</li>
+	  <li>Server Support: ❌</li>
+	  <li>Device Licensing: Unlimited</li>
+  </ul>
   <p><strong>Validation Type:</strong> OV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
   <p><strong>Issuance:</strong> 1–3 Days</p>
   <p><strong>Warranty:</strong> $1,000,000</p>
   <p><strong>Total Domains:</strong> 1 (Wildcard)</p>
-  <p>Secure your entire domain, including all subdomains, with a single certificate. Ideal for businesses and internal networks.</p>
+  
   <span class="badge">From $879.99/yr</span>
   <div style="margin-top:10px;">
     <a href="https://nowpayments.io/payment/?iid=4363460714&source=button" target="_blank" rel="noreferrer noopener">
@@ -622,12 +652,22 @@
 <div class="card">
   <h3>OV Multi-Domain SSL (3 Domains)</h3>
   <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" alt="Sectigo OV Multi-Domain" />
+  <p>The ideal SSL/TLS certificate for intranets, multi-domain environments, and secure backend connections.</p>
+
+  <ul style="list-style:none;padding-left:0;margin-top:10px;">
+	  <li>Email Signing: ✅</li>
+	  <li>Email Encryption: ✅</li>
+	  <li>Document Signing: ✅</li>
+	  <li>Certificate Authentication: ✅</li>
+	  <li>Server Support: ❌</li>
+	  <li>Device Licensing: Unlimited</li>
+  </ul>
   <p><strong>Validation Type:</strong> OV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
   <p><strong>Issuance:</strong> 1–3 Days</p>
   <p><strong>Warranty:</strong> $1,000,000</p>
   <p><strong>Total Domains:</strong> 3 (2 additional SANs included)</p>
-  <p>The ideal SSL/TLS certificate for intranets, multi-domain environments, and secure backend connections.</p>
+  
   <span class="badge">From $499.99/yr</span>
   <div style="margin-top:10px;">
     <a href="https://nowpayments.io/payment/?iid=5338512201&source=button" target="_blank" rel="noreferrer noopener">
@@ -639,12 +679,21 @@
 <div class="card">
   <h3>OV SSL Certificate</h3>
   <img src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo OV SSL" />
+  <p>Ideal for verified business websites and secured internal communications behind firewalls.</p>
+  <ul style="list-style:none;padding-left:0;margin-top:10px;">
+	  <li>Email Signing: ✅</li>
+	  <li>Email Encryption: ✅</li>
+	  <li>Document Signing: ✅</li>
+	  <li>Certificate Authentication: ✅</li>
+	  <li>Server Support: ❌</li>
+	  <li>Device Licensing: Unlimited</li>
+  </ul>
   <p><strong>Validation Type:</strong> OV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
   <p><strong>Issuance:</strong> 1–3 Days</p>
   <p><strong>Warranty:</strong> $1,000,000</p>
   <p><strong>Total Domains:</strong> 1</p>
-  <p>Ideal for verified business websites and secured internal communications behind firewalls.</p>
+  
   <span class="badge">From $179.00/yr</span>
   <div style="margin-top:10px;">
     <a href="https://nowpayments.io/payment/?iid=5157619023&source=button" target="_blank" rel="noreferrer noopener">
