--- a/services.html
+++ b/services.html
@@ -456,6 +456,7 @@
     <li>Certificate Authentication: ✅</li>
     <li>Server Support: ❌</li>
     <li>Device Licensing: Unlimited</li>
+	
   </ul>
 	
   	<p><strong>Validation Type:</strong> Mailbox-Validated</p>
@@ -578,6 +579,13 @@
 	  <li>Certificate Authentication: ✅</li>
 	  <li>Server Support: ❌</li>
 	  <li>Device Licensing: Unlimited</li>
+	  <li>Verified Company Name: ✅</li>
+    <li>SAN Support: ✅</li>
+    <li>Vulnerability Assessment: ❌</li>
+    <li>Wildcard: ❌</li>
+    <li>Site Seal: Static</li>
+    <li>Server Licensing: Unlimited</li>
+    <li>Malware Scan: ❌</li>
   </ul>
 	
   <p><strong>Validation Type:</strong> EV</p>
@@ -605,6 +613,12 @@
 	  <li>Certificate Authentication: ✅</li>
 	  <li>Server Support: ❌</li>
 	  <li>Device Licensing: Unlimited</li>
+	      <li>SAN Support: ❌</li>
+    <li>Vulnerability Assessment: ❌</li>
+    <li>Wildcard: ❌</li>
+    <li>Site Seal: Dynamic</li>
+    <li>Server Licensing: Unlimited</li>
+    <li>Malware Scan: ❌</li>
 	</ul>
 
   <p><strong>Validation Type:</strong> EV</p>
@@ -634,6 +648,13 @@
 	  <li>Certificate Authentication: ✅</li>
 	  <li>Server Support: ❌</li>
 	  <li>Device Licensing: Unlimited</li>
+	  	      <li>SAN Support: ❌</li>
+    <li>Vulnerability Assessment: ❌</li>
+    <li>Wildcard: ✅</li>
+    <li>Site Seal: Dynamic</li>
+    <li>Server Licensing: Unlimited</li>
+    <li>Malware Scan: ❌</li>
+	  
   </ul>
   <p><strong>Validation Type:</strong> OV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
@@ -661,6 +682,12 @@
 	  <li>Certificate Authentication: ✅</li>
 	  <li>Server Support: ❌</li>
 	  <li>Device Licensing: Unlimited</li>
+	  <li>SAN Support: ✅</li>
+    <li>Vulnerability Assessment: ❌</li>
+    <li>Wildcard: ❌</li>
+    <li>Site Seal: Dynamic</li>
+    <li>Server Licensing: Unlimited</li>
+    <li>Malware Scan: ❌</li>
   </ul>
   <p><strong>Validation Type:</strong> OV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
@@ -687,6 +714,12 @@
 	  <li>Certificate Authentication: ✅</li>
 	  <li>Server Support: ❌</li>
 	  <li>Device Licensing: Unlimited</li>
+	  <li>SAN Support: ❌</li>
+    <li>Vulnerability Assessment: ❌</li>
+    <li>Wildcard: ❌</li>
+    <li>Site Seal: Dynamic</li>
+    <li>Server Licensing: Unlimited</li>
+    <li>Malware Scan: ❌</li>
   </ul>
   <p><strong>Validation Type:</strong> OV</p>
   <p><strong>Reissue:</strong> Unlimited</p>
