--- a/services.html
+++ b/services.html
@@ -257,7 +257,7 @@
 <div class="card">
   <h3>EnterpriseSSL Pro with EV</h3>
 
-  <img src="http://ipfs.io/ipfs/QmP8KiqYbtivBTt1AJo89E2i8FUyN7LGp7qWkuWUisxgwV"
+  <img src="http://ipfs.io/ipfs/QmcyHn5hUWn7imvnBRqufDdYmfZNLNoUZvigE4E3q7G8UY"
        alt="EnterpriseSSL Pro EV Certificate"
        style="width:100%;border-radius:10px;margin:10px 0;">
 
@@ -315,7 +315,7 @@
 <div class="card">
   <h3>PositiveSSL EV</h3>
 
-  <img src="http://ipfs.io/ipfs/QmayrovHyt146rjRrMZd8nvLf8uokfkx3d9AnYMtNpxDfH"
+  <img src="http://ipfs.io/ipfs/Qmd6f26jGiN4pcpS76chFqEbzTSHJamJsCMuRDbTYyGj8N"
        alt="PositiveSSL EV Certificate"
        style="width:100%;border-radius:10px;margin:10px 0;">
 
@@ -529,7 +529,7 @@
 <!-- Web Security -->
 <div class="card">
 	<h3>HackerGuardian PCI Scan Control Center</h3>
-	<img src="http://ipfs.io/ipfs/QmWx1xqZwKgmggedEH4exyXKJwCoXFpJNsQo6DjAEPwDiE" alt="HackerGuardian PCI Scan Control Center" />
+	<img src="http://ipfs.io/ipfs/QmevzdYMixr1Mkav8fWVrPrmiqma5pVYqsHs9BExuoSvEr" alt="HackerGuardian PCI Scan Control Center" />
 
 	<p>HackerGuardian PCI Scan Control Center provides an on-demand security auditing service and PCI Scan compliance reports.</p>
    <!-- HackerGuardian Compliance & Capabilities -->
@@ -569,7 +569,7 @@
 
 <div class="card">
   <h3>EV Multi-Domain SSL (3 Domains)</h3>
-  <img src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo EV Multi-Domain" />
+  <img src="http://ipfs.io/ipfs/QmY94E15mQb8g1tyPGVQc3gKdfM1ZpLAZC1j5osUmyyZw6" alt="Sectigo EV Multi-Domain" />
   <p>Activate your verified company name across up to 250 different domains for maximum visibility and trust.</p>
 
   <ul style="list-style:none;padding-left:0;margin-top:10px;">
@@ -604,7 +604,7 @@
 
 <div class="card">
   <h3>EV SSL Certificate</h3>
-  <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" alt="Sectigo EV SSL" />
+  <img src="http://ipfs.io/ipfs/QmY94E15mQb8g1tyPGVQc3gKdfM1ZpLAZC1j5osUmyyZw6" alt="Sectigo EV SSL" />
   <p>Display your verified company name across up to 250 different domains for maximum visibility and trust.</p>  
   <ul style="list-style:none;padding-left:0;margin-top:10px;">
 	  <li>Email Signing: ✅</li>
@@ -639,7 +639,7 @@
 
 <div class="card">
   <h3>OV Wildcard SSL</h3>
-  <img src="https://seeklogo.com/images/S/sectigo-logo-3EF2BDCC26-seeklogo.com.png" alt="Sectigo OV Wildcard" />
+  <img src="http://ipfs.io/ipfs/QmY94E15mQb8g1tyPGVQc3gKdfM1ZpLAZC1j5osUmyyZw6" alt="Sectigo OV Wildcard" />
   <p>Secure your entire domain, including all subdomains, with a single certificate. Ideal for businesses and internal networks.</p>
   <ul style="list-style:none;padding-left:0;margin-top:10px;">
 	  <li>Email Signing: ✅</li>
@@ -672,7 +672,7 @@
 
 <div class="card">
   <h3>OV Multi-Domain SSL (3 Domains)</h3>
-  <img src="https://images.seeklogo.com/logo-png/34/1/sectigo-limited-logo-png_seeklogo-344652.png" alt="Sectigo OV Multi-Domain" />
+  <img src="http://ipfs.io/ipfs/QmVtKaSfcRQ4ZQwvkzmyQ5krsTFPcVvPx1DpbKqi4VGFoo" alt="Sectigo OV Multi-Domain" />
   <p>The ideal SSL/TLS certificate for intranets, multi-domain environments, and secure backend connections.</p>
 
   <ul style="list-style:none;padding-left:0;margin-top:10px;">
@@ -705,7 +705,7 @@
 
 <div class="card">
   <h3>OV SSL Certificate</h3>
-  <img src="https://images.seeklogo.com/logo-png/47/1/sectigo-logo-png_seeklogo-476321.png" alt="Sectigo OV SSL" />
+  <img src="http://ipfs.io/ipfs/QmVtKaSfcRQ4ZQwvkzmyQ5krsTFPcVvPx1DpbKqi4VGFoo" alt="Sectigo OV SSL" />
   <p>Ideal for verified business websites and secured internal communications behind firewalls.</p>
   <ul style="list-style:none;padding-left:0;margin-top:10px;">
 	  <li>Email Signing: ✅</li>
