--- a/index.html
+++ b/index.html
@@ -102,9 +102,21 @@
     .badge{background:#eef2ff;color:var(--primary);border-radius:999px;padding:6px 10px;font-weight:700;font-size:0.85rem}
     .btn{background:var(--primary);color:#fff;padding:10px 14px;border-radius:8px;text-decoration:none;font-weight:700}
     .services-summary{background:var(--card);padding:20px;border-radius:12px;box-shadow:0 6px 18px rgba(2,6,23,0.04);text-align:center;margin-top:18px}
-    footer{background:#000;color:#fff;text-align:center;padding:18px 10px;margin-top:36px}
+    footer{background:#000;color:#fff;text-align:center;padding:18px 10px;margin-top:36px
+          /* ===== Payments ===== */
+    .payment-methods{margin:16px 0 10px}
+    .payment-methods h4{margin:0 0 10px;font-size:.95rem;color:#e5e7eb}
+    .payment-icons{display:flex;justify-content:center;gap:18px;flex-wrap:wrap}
+    .payment-icons img{
+      height:32px;
+      background:#fff;
+      padding:6px 10px;
+      border-radius:8px;
+    }
+          }
     footer nav a{color:#fff;text-decoration:none}
     @media (max-width:640px){header img{width:64px}; .intro h2{font-size:1.25rem}}
+    
   </style>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
      crossorigin="anonymous"></script>
@@ -184,12 +196,22 @@
   </main>
 
   <footer>
+    
     <p style="margin:6px 0">&copy; 2024–2026 THQ Cyber Division Unincorporated</p>
     <nav aria-label="footer links">
       <a href="terms.html" style="text-decoration:none;color:#fff">Terms</a> |
       <a href="privacy.html" style="text-decoration:none;color:#fff">Privacy</a> |
       <a href="mailto:thqcs@protonmail.com" style="text-decoration:none;color:#fff">Contact</a>
     </nav>
+    <div class="payment-methods" aria-label="Supported payment methods">
+    <h4>Supported Payment Methods</h4>
+    <div class="payment-icons">
+      <img src="http://ipfs.io/ipfs/Qmap7GAvH91ESFFZQwEGN6MAAYtVYvbHQB62PaVNFSXXSG" alt="PayPal">
+      <img src="http://ipfs.io/ipfs/QmZysPtZxC8CWjVSdPEmTU29qhf7UrmfBmc9sm4XuJsD5F" alt="NowPayments">
+      <img src="http://ipfs.io/ipfs/QmYLxvScAqsBzU2DivVjoko5eVridWtz8piNuD5iiwSvZr" alt="Debit Cards">
+    </div>
+  </div>
+
     <a href="https://cww.verifytrustseal.com/verification/
 eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" target="_blank"><img src="https://cww.verifytrustseal.com/seal/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJkb21haW5JZCI6IjIzNjEzMCIsInRoZW1lIjoibGlnaHQiLCJob3N0bmFtZSI6ImxvZ2luLmN3YXRjaC5jb21vZG8uY29tIiwibGFuZ3VhZ2UiOiJlbiIsImlhdCI6MTc2OTg5Mzg0M30.-efGVCPkFj5AYakBI1h5zdoqAF2U84-JgDITxlwYMEY?clang=en" style="max-width:240; max-height:120; position:fixed; left:0px; bottom:0px; z-index:9999" alt="cww trust seal"></a>
     <!--
