--- a/services.html
+++ b/services.html
@@ -224,7 +224,16 @@
       margin-bottom:8px;
     }
     footer{background:#000; color:#fff; text-align:center; padding:18px 12px; margin-top:28px;}
-    
+         /* ===== Payments ===== */
+    .payment-methods{margin:16px 0 10px}
+    .payment-methods h4{margin:0 0 10px;font-size:.95rem;color:#e5e7eb}
+    .payment-icons{display:flex;justify-content:center;gap:18px;flex-wrap:wrap}
+    .payment-icons img{
+      height:48px;
+      background:#fff;
+      padding:8px 14px;
+      border-radius:10px;
+    }
   </style>
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
      crossorigin="anonymous"></script>
@@ -785,6 +794,14 @@
       <a href="privacy.html" style="color:#fff">Privacy</a> |
       <a href="mailto:thqcs@protonmail.com" style="color:#fff">Contact</a>
     </nav>
+	  <div class="payment-methods" aria-label="Supported payment methods">
+    <h4>Supported Payment Methods</h4>
+    <div class="payment-icons">
+      <img src="http://ipfs.io/ipfs/Qmap7GAvH91ESFFZQwEGN6MAAYtVYvbHQB62PaVNFSXXSG" alt="PayPal">
+      <img src="http://ipfs.io/ipfs/QmZysPtZxC8CWjVSdPEmTU29qhf7UrmfBmc9sm4XuJsD5F" alt="NowPayments">
+      <img src="http://ipfs.io/ipfs/QmYLxvScAqsBzU2DivVjoko5eVridWtz8piNuD5iiwSvZr" alt="Debit Cards">
+    </div>
+  </div>
   </footer>
 
 
