--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
 
   gtag('config', 'G-8NQGQSGEVY');
 </script>
-  <script>
-    function initApollo(){var n=Math.random().toString(36).substring(7),o=document.createElement("script");
-    o.src="https://assets.apollo.io/micro/website-tracker/tracker.iife.js?nocache="+n,o.async=!0,o.defer=!0,
-    o.onload=function(){window.trackingFunctions.onLoad({appId:"698cf1a1c5051c001dbc7ca9"})},
-    document.head.appendChild(o)}initApollo();
-  </script>
-  <meta charset="utf-8" />
+   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cyber Threat Intelligence & Sectigo SSL | THQ Cyber Division</title>
   <meta name="description" content="THQ Cyber Division provides professional cyber threat intelligence, secure hosts, and Sectigo SSL/TLS certificates for organizations and researchers." />
@@ -64,15 +58,15 @@
 
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to https://*.tawk.to;
+  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://embed.tawk.to https://*.tawk.to https://assets.apollo.io;
   style-src 'self' 'unsafe-inline'  https://embed.tawk.to https://*.tawk.to;
-  img-src 'self' data: https://cww.verifytrustseal.com https://ipfs.io https://images.seeklogo.com https://ipfs.tech https://seeklogo.com https://*.tawk.to https://embed.tawk.to https://s3.amazonaws.com;
-  frame-src https://www.youtube.com https://embed.tawk.to https://*.tawk.to https://w1.tawk.to;;
-  connect-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
-  font-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
-  object-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
-  base-uri 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
-  form-action 'self' https://fabform.io https://nowpayments.io https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
+  img-src 'self' data: https://cww.verifytrustseal.com https://ipfs.io https://images.seeklogo.com https://ipfs.tech https://seeklogo.com https://*.tawk.to https://embed.tawk.to https://s3.amazonaws.com https://assets.apollo.io;
+  frame-src https://www.youtube.com https://embed.tawk.to https://*.tawk.to https://w1.tawk.to https://assets.apollo.io;
+  connect-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
+  font-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
+  object-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
+  base-uri 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
+  form-action 'self' https://fabform.io https://nowpayments.io https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
   frame-ancestors 'none';
 ">
   
@@ -124,6 +118,13 @@
     @media (max-width:640px){header img{width:64px}; .intro h2{font-size:1.25rem}}
     
   </style>
+   <script>
+    function initApollo(){var n=Math.random().toString(36).substring(7),o=document.createElement("script");
+    o.src="https://assets.apollo.io/micro/website-tracker/tracker.iife.js?nocache="+n,o.async=!0,o.defer=!0,
+    o.onload=function(){window.trackingFunctions.onLoad({appId:"698cf1a1c5051c001dbc7ca9"})},
+    document.head.appendChild(o)}initApollo();
+  </script>
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9920132045090748"
      crossorigin="anonymous"></script>
 </head>
