--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
 
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
-  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://*.apollo.io https://embed.tawk.to https://*.tawk.to https://assets.apollo.io;
+  script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://aplo-evnt.com https://*.apollo.io https://embed.tawk.to https://*.tawk.to https://assets.apollo.io;
   style-src 'self' 'unsafe-inline'  https://embed.tawk.to https://*.tawk.to;
-  img-src 'self' data: https://cww.verifytrustseal.com https://ipfs.io https://*.apollo.io https://images.seeklogo.com https://ipfs.tech https://seeklogo.com https://*.tawk.to https://embed.tawk.to https://s3.amazonaws.com https://assets.apollo.io;
-  frame-src https://www.youtube.com https://embed.tawk.to https://*.tawk.to https://w1.tawk.to https://assets.apollo.io;
-  connect-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com;
-  font-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
-  object-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
-  base-uri 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
-  form-action 'self' https://fabform.io https://nowpayments.io https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io;
+  img-src 'self' data: https://cww.verifytrustseal.com https://ipfs.io https://aplo-evnt.com https://*.apollo.io https://images.seeklogo.com https://ipfs.tech https://seeklogo.com https://*.tawk.to https://embed.tawk.to https://s3.amazonaws.com https://assets.apollo.io;
+  frame-src https://www.youtube.com https://embed.tawk.to https://aplo-evnt.com https://*.tawk.to https://w1.tawk.to https://assets.apollo.io;
+  connect-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://aplo-evnt.com;
+  font-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io https://aplo-evnt.com;
+  object-src 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io https://aplo-evnt.com;
+  base-uri 'self' https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://assets.apollo.io https://aplo-evnt.com;
+  form-action 'self' https://fabform.io https://nowpayments.io https://*.tawk.to wss://*.tawk.to https://cww.verifytrustseal.com https://aplo-evnt.com https://assets.apollo.io;
   frame-ancestors 'none';
 ">
   
