--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <meta name="description" content="THQ Cyber Division provides professional cyber threat intelligence, secure hosts, and Sectigo SSL/TLS certificates for organizations and researchers." />
   <meta name="keywords" content="cyber threat intelligence, sectigo ssl, EV SSL, OV SSL, malware analysis, secure hosting, dedicated servers" />
 
+  <meta name="pushsdk" content="fa82594fcd95916a5b868b2a887abd81">
+
   <!-- Open Graph / Twitter Tags -->
   <meta property="og:title" content="Cybersecurity & Sectigo Certificates | THQ Cyber Division">
   <meta property="og:description" content="Expert cyber threat intelligence, secure hosting, and verified Sectigo SSL/TLS certificates for organizations, research, and operations." />
