--- a/blog.html
+++ b/blog.html
@@ -22,6 +22,8 @@
   <meta name="description" content="Professional introductions to cryptography and the business benefits of Sectigo SSL certificates. THQ Cyber Division provides Sectigo provisioning and certificate lifecycle management." />
   <meta name="keywords" content="cryptography, Sectigo, SSL, TLS, certificate provisioning, website security, certificate lifecycle" />
   <link rel="canonical" href="https://thqcyberdivision.github.io/blog.html" />
+  
+  <meta name="pushsdk" content="cf5817f37283097a428b8843bb9cf466">
 
   <!-- Open Graph -->
   <meta property="og:site_name" content="THQ Cyber Division" />
